@@ -82,7 +82,7 @@
   msys-termcap.xml:2010071900
   msys-texinfo.xml:2010080900
   msys-unzip.xml:2010090600
-  msys-vim.xml:2011031800
+  msys-vim.xml:2011031900
   msys-w32api.xml:2010090600
   msys-wget.xml:2010090600
   msys-xz.xml:2010080500
