@@ -22,6 +22,10 @@
 
       <component class="bin">
         <requires eq="msys-core-*-msys-*-bin.tar" />
+        <release tarname="vim-7.3-2-msys-1.0.16-bin.tar.lzma" >
+          <requires eq="msys-libintl-*-msys-*-dll-8.tar" />
+          <requires eq="msys-libtermcap-*-msys-*-dll-0.tar" />
+        </release>
         <release tarname="vim-7.3-1-msys-1.0.16-bin.tar.lzma" >
           <requires eq="msys-libintl-*-msys-*-dll-8.tar" />
           <requires eq="msys-libtermcap-*-msys-*-dll-0.tar" />
@@ -33,16 +37,19 @@
       </component>
 
       <component class="lang">
+        <release tarname="vim-7.3-2-msys-1.0.16-lang.tar.lzma" />
         <release tarname="vim-7.3-1-msys-1.0.16-lang.tar.lzma" />
         <release tarname="vim-7.2-2-msys-1.0.13-lang.tar.lzma" />
       </component>
 
       <component class="doc">
+        <release tarname="vim-7.3-2-msys-1.0.16-doc.tar.lzma" />
         <release tarname="vim-7.3-1-msys-1.0.16-doc.tar.lzma" />
         <release tarname="vim-7.2-2-msys-1.0.13-doc.tar.lzma" />
       </component>
 
       <component class="lic">
+        <release tarname="vim-7.3-2-msys-1.0.16-lic.tar.lzma" />
         <release tarname="vim-7.3-1-msys-1.0.16-lic.tar.lzma" />
         <release tarname="vim-7.2-2-msys-1.0.13-lic.tar.lzma" />
       </component>
